<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">USMA</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Ouvrir le menu</string>
    <string name="navigation_drawer_close">Fermer le menu</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="group_cant_load">Impossible de charger les groupes...
        Vérifiez votre connexion internet</string>
    <string name="comment_cant_load">Impossible de charger les commentaires...
        Vérifiez votre connexion internet</string>
    <string name="offline_warning">Vous n\'êtes pas connecté à internet, certaines fonctions
        sont indisponibles</string>
    <string name="join_event">Participer </string>
    <string name="comment_loading">Chargement des commentaires</string>
    <string name="start_push_training">Nouvel Entraînement :</string>
    <string name="start_push_race">Nouvelle Course :</string>
    <string name="start_push_comment">Nouveau Commentaire sur</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Numéro de license</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_up">Inscription</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">L\'email est invalide</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">L\'email ou le numéro de licence sont incorrects</string>
    <string name="error_field_required">This field is required</string>
    <string name="welcome">L\'appli USMA</string>
    <string name="sign_up">inscription</string>
    <string name="error_network">pas de connexion réseau</string>

    <!-- Strings related to login -->
    <string name="race">Courses</string>
    <string name="groups">Mes groupes</string>
    <string name="training">Entraînements</string>
    <string name="licence">Ma licence</string>
    <string name="users">Licenciés</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- NewUser Strings -->
    <string name="hint_name">Nom</string>
    <string name="hint_firstname">Prénom</string>
    <string name="hint_email">Email</string>
    <string name="hint_licence">Numéro de licence</string>
    <string name="hint_bithdate">Date de naissance</string>
    <string name="save_user">Ajouter l\' adhérent</string>
    <string name="added">ajouté</string>
    <string name="cancel">Annuler</string>
    <string name="new_user">Nouvel Adhérent</string>

    <string name="err_msg_name">Entrer le nom de l\'adhérent</string>
    <string name="err_msg_firstname">Entrer le prénom de l\'adhérent</string>
    <string name="err_msg_email">Entrer l\'email de l\'adhérent</string>
    <string name="err_msg_licence">Entrer le numéro de licence de l\'adhérent</string>
    <string name="err_msg_birthdate">Entrer la date de naissance</string>

    <!-- NewGroup Strings -->
    <string name="hint_group_name">Nom du groupe</string>
    <string name="hint_group_description">Description du groupe</string>
    <string name="save_group">Ajouter le groupe</string>
    <string name="new_group">Ajouter un groupe au club</string>

    <string name="err_msg_group_name">Entrer le nom du groupe</string>


    <string name="details">Détails</string>
    <!-- NewRace Strings -->
    <string name="hint_race_name">Nom de la course</string>
    <string name="hint_race_overview">Aperçu de la course (nombre de km, dénivelé,
        heure ...) </string>
    <string name="race_type">Type de course : </string>
    <string name="hint_race_date">Date</string>
    <string name="hint_race_details">Détails pratiques (inscription, adresse, horaires,
        ravitaillements...)</string>
    <string name="save_race">Enregistrer la course</string>
    <string name="new_race">Nouvelle course</string>

    <string name="err_msg_race_name">Entrer le nom de la course</string>
    <string name="err_msg_race_date">Entrer la date de la course</string>

    <string-array name="array_race_type">
        <item>Route</item>
        <item>Cross</item>
        <item>Trail</item>
        <item>Piste</item>
    </string-array>

    <!-- NewTraining Strings -->
    <string name="hint_training_name">Nom de l\'entraînement</string>
    <string name="hint_training_overview">Aperçu de l\'entraînement (nombre de km, dénivelé,
        heure ...) </string>
    <string name="training_type">Type d\'entrainement : </string>
    <string name="hint_training_date">Date</string>
    <string name="hint_training_details">Détails pratiques (Adresse, horaires,
        durée...)</string>
    <string name="save_training">Enregistrer la séance</string>
    <string name="new_training">Nouvel entraînement</string>


    <string-array name="array_training_type">
        <item>Fractionné</item>
        <item>Endurance</item>
        <item>Séance longue</item>
    </string-array>

    <!-- NewTraining Strings -->


    <string name="err_msg_training_name">Entrer le nom de la séance</string>
    <string name="err_msg_training_date">Entrer la date de la séance</string>

    <string name="modify">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="action_sign_in_group">S\'inscrire</string>
    <string name="signed_in_group">Inscrit</string>

    <string name="hint_new_comment">Ecrivez un commentaire ...</string>



</resources>
