<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="example.com.usma.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical" >

            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/USMABlue"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:text="@string/welcome"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                tools:context=".MainActivity" />
            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logousma"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/app_title"
                />
            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true"
                android:layout_below="@id/app_logo"/>

            <EditText android:id="@+id/licence_number" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1" android:singleLine="true"
                android:layout_below="@id/email"
                android:paddingBottom="10dp"/>

            <Button
                android:id="@+id/sign_in_button"
                android:text="@string/action_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_light"
                android:layout_below="@id/licence_number"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
